<resources>
    <string name="app_name">PestiSafe</string>
    <string name="get_started">Get Started</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_log_in">Already have an account? Log In</string>
    <string name="sign_up_now">Sign Up</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="log_in_to_your_account">Log in to your Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="history_of_detection_results">History of Detection Results</string>
    <string name="start_the_detection">Start The Detection</string>
    <string name="list_of_registered_pesticide_products">List of Registered Pesticide Products</string>
    <string name="list_of_banned_and_registered_pesticides">List of Banned and Registered Pesticides</string>
    <string name="philippine_national_standard_for_banana_maximum_residue_limits_mrl_of_pesticides">Philippine National Standard for Banana Maximum Residue Limits (MRL) of Pesticides</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pestisafe_aims_to_provide_agricultural_safety_and_sustainability_by_innovating_solutions_for_detecting_pesticide_residue_level_in_cavendish_bananas_committed_to_empowering_supply_chain_stakeholders_promoting_a_healthier_world_through_informed_decision_and_sustainable_farming_practices">Pestisafe aims to provide agricultural safety and sustainability by innovating solutions for detecting pesticide residue level in Cavendish Bananas. Committed to empowering supply chain stakeholders, promoting a healthier world through informed decision and sustainable farming practices.</string>
    <string name="empowering_agricultural_safety_globally_pestisafe_envisions_to_provide_pesticide_residue_level_detection_in_cavendish_banana_with_the_aid_of_advanced_technology_our_commitment_to_innovation_and_responsible_practices_aim_to_create_a_sustainable_and_secure_food_supply_for_generations">Empowering Agricultural Safety Globally. PestiSafe envisions to provide pesticide residue level detection in Cavendish Banana with the aid of advanced technology. Our commitment to innovation and responsible practices aim to create a sustainable and secure food supply for generations.</string>
    <string name="vision">VISION</string>
    <string name="mission">MISSION</string>
    <string name="contact_us">Contact Us</string>
    <string name="rothamparo">ROTHELIEN CARYLE AKAI AMPARO qrcasamparo@tip.edu.ph</string>
    <string name="johannah_mariz_fegues_qjmdfegues_tip_edu_ph">JOHANNAH MARIZ FEGUES qjmdfegues@tip.edu.ph</string>
    <string name="name">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="country">Country</string>
    <string name="update">Update</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="additional_information">Additional Information</string>
    <string name="about">About</string>
    <string name="upload_file">Upload File</string>
    <string name="camera">Camera</string>
    <string name="upload">Upload</string>
    <string name="captured_image">Captured Image</string>
    <string name="todo">TODO</string>
    <string name="app_icon">App Icon</string>
    <string name="log_out">Log Out</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="history">History</string>
    <string name="search_files">Search files...</string>
    <string name="sort_by_date">Sort by date ▼</string>
    <string name="return_to_detection">RETURN TO DETECTION</string>
    <string name="critical_level">Critical Level</string>
    <string name="high_level">High Level</string>
    <string name="normal_level">Normal Level</string>
    <string name="legend">Legend:</string>
    <string name="codex_mrl_2mg_kg">Codex MRL: 2mg/kg</string>
    <string name="pesticide_class_organophosphate">Pesticide Class: Organophosphate</string>
    <string name="pesticide_found_chlorpyrifos">Pesticide Found: Chlorpyrifos</string>
    <string name="crop_sample_cavendish_banana">Crop Sample: Cavendish Banana</string>
    <string name="diminish_the_concentration_of_pesticide_treatment_to_less_than_or_equal_to_2mg_kg">Diminish the concentration of pesticide treatment to less than or equal to 2mg/kg.</string>
    <string name="recommendation">Recommendation:</string>
    <string name="do_not_conformed_with_codex_mrl_toxic">Do not conformed with Codex MRL; Toxic</string>
    <string name="interpretation">Interpretation:</string>
    <string name="uploaded_image">Uploaded Image</string>
    <string name="date_tested_may_7_2025">Date Tested: May 7, 2025</string>
    <string name="pesticide_residue_level_results">Pesticide Residue Level Results</string>
    <string name="result_image">Result Image</string>
    <string name="prediction_will_appear_here">Prediction will appear here</string>
    <string name="rothelien_caryle_akai_amparo">ROTHELIEN CARYLE AKAI AMPARO</string>
    <string name="qrcasamparo_tip_edu_ph">qrcasamparo@tip.edu.ph</string>
    <string name="johannah_mariz_fegues">JOHANNAH MARIZ FEGUES</string>
    <string name="qjmdfegues_tip_edu_ph">qjmdfegues@tip.edu.ph</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="export_as_pdf">Export as PDF</string>
    <string name="don_t_ask_again">Don\'t ask again</string>
    <string name="detect">Detect</string>
    <string name="condition">Condition</string>
    <string name="date">Date</string>
    <string name="detection_results">Detection Results</string>
    <string name="continuetxt">Continue</string>
    <string name="pesticide_class_active_ingredient">Pesticide Class (Active Ingredient): –</string>
    <string name="residue_range">Residue Range: –</string>
    <string name="filter_by_date">Filter by Date</string>
    <string name="clear">Clear</string>
    <string name="code_of_gap_for_fruits_and_vegetables">Code of GAP for Fruits and Vegetables</string>
    <string name="philgap_manual_for_fruit_and_vegetable_farming">PhilGAP Manual for Fruit and Vegetable Farming</string>
    <string name="qavtusing_tip_edu_ph">qavtusing@tip.edu.ph</string>
    <string name="angelo_tusing">ANGELO TUSING</string>
</resources>