<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profilelayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:textAlignment="center"
    tools:context=".Activity.ProfileActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintBottom_toTopOf="@+id/profiletxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/backicon" />

    <TextView
        android:id="@+id/profiletxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="136dp"
        android:text="@string/profile"
        android:textColor="@color/darkGreen"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtfullname"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginTop="91dp"
        android:textColorHint="@color/darkGreen"
        app:boxStrokeColor="@color/darkGreen"
        app:hintTextColor="@color/darkGreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profiletxt">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fullname"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/name" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtemailaddp"
        android:layout_width="300dp"
        android:layout_height="55dp"

        android:layout_marginTop="20dp"
        android:textColorHint="@color/darkGreen"
        app:boxStrokeColor="@color/darkGreen"
        app:hintTextColor="@color/darkGreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtfullname">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailaddp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email_address" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtmobilelno"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/darkGreen"
        app:boxStrokeColor="@color/darkGreen"
        app:hintTextColor="@color/darkGreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtemailaddp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/mobileno"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/mobile_number" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtcountry"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/darkGreen"
        app:boxStrokeColor="@color/darkGreen"
        app:hintTextColor="@color/darkGreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtmobilelno">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/country"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/country" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/updateBtn"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="161dp"
        android:backgroundTint="@color/darkGreen"
        android:text="@string/update"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtcountry" />

</androidx.constraintlayout.widget.ConstraintLayout>