<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signuplayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkGreen"
    android:textAlignment="center"
    tools:context=".Activity.SignUpActivity">

    <TextView
        android:id="@+id/signuptxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="136dp"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/alreadyhaveanacc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="136dp"
        android:text="@string/already_have_an_account_log_in"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signuptxt" />

    <View
        android:id="@+id/rectangle_at_the_bot"
        android:layout_width="414dp"
        android:layout_height="348dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="146dp"
        android:background="@color/white"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/reccircle"
        android:layout_width="350dp"
        android:layout_height="390dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="144dp"
        android:fadingEdge="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_at_the_bot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alreadyhaveanacc"
        app:layout_constraintVertical_bias="0.189"
        app:srcCompat="@drawable/round_rect_shape" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtinpfirstname"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="30dp"
        android:textColorHint="@color/darkGreen"
        app:boxStrokeColor="@color/darkGreen"
        app:hintTextColor="@color/darkGreen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/reccircle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/firstname"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/first_name" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtinplastname"
        android:layout_width="150dp"
        android:layout_height="55dp"

        android:layout_marginTop="30dp"
        android:layout_marginEnd="52dp"
        android:textColorHint="@color/darkGreen"
        app:boxStrokeColor="@color/darkGreen"
        app:hintTextColor="@color/darkGreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/reccircle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lastname"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/last_name" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailaddtxtsign"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/darkGreen"
        app:boxStrokeColor="@color/darkGreen"
        app:hintTextColor="@color/darkGreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtinpfirstname">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailadd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email_address" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pwtxtsign"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/darkGreen"
        app:boxStrokeColor="@color/darkGreen"
        app:hintTextColor="@color/darkGreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailaddtxtsign"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/signupBtn"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginStart="160dp"
        android:layout_marginEnd="161dp"
        android:layout_marginBottom="91dp"
        android:backgroundTint="@color/darkGreen"
        android:text="@string/sign_up_now"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/rectangle_at_the_bot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pwtxtsign"
        app:layout_constraintVertical_bias="0.139" />

</androidx.constraintlayout.widget.ConstraintLayout>